// Vitest Snapshot v1

exports[`FsExample.vue > Desktop > Click button 1`] = `
<div class="container">
  <h2 class="green">📁 File System Example:</h2>
  <!--v-if-->
  <button> Click for File System example </button>
  <p>
    <strong>The contents of the current working directory:</strong> example-file-1.ext, example-file-2.ext
  </p>
</div>
`;

exports[`FsExample.vue > Desktop > Error state 1`] = `
<div class="container">
  <h2 class="green">📁 File System Example:</h2>
  <div> There was an error attempting to read from the file system. </div>
  <button> Try again for File System example </button>
  <!--v-if-->
</div>
`;

exports[`FsExample.vue > Desktop > Render default contents 1`] = `
<div class="container">
  <h2 class="green">📁 File System Example:</h2>
  <!--v-if-->
  <button> Click for File System example </button>
  <!--v-if-->
</div>
`;

exports[`FsExample.vue > Web > Render default contents 1`] = `<!--v-if-->`;
